# readr

./: .gitignore  .pre-commit-config.yaml  CONTEXT.md  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  playwright.config.js  start.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: articles.py  digests.py  entities.py  feeds.py  filters.py  rules.py  saved_searches.py  settings.py  tags.py  topics.py
backend/app/services/: extractor.py  fetcher.py  llm.py  scheduler.py  smart_search.py
backend/tests/: conftest.py
backend/tests/api/: test_articles.py  test_digests.py  test_feeds.py  test_rules.py  test_settings.py  test_tags.py  test_topics.py
backend/tests/unit/: test_extractor.py  test_fetcher.py  test_llm.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vitest.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  sanitize.js
frontend/src/lib/__tests__/: api.test.js  app.store.test.js  article-list.test.js
frontend/src/lib/components/: AddFeedModal.svelte  ArticleCard.svelte  ArticleList.svelte  ArticleReader.svelte  BulkAddModal.svelte  Sidebar.svelte  (+8 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/e2e/: article-reading.spec.js  feed-management.spec.js  helpers.js  keyboard.spec.js  layout.spec.js  mobile.spec.js  persistence.spec.js  scroll.spec.js  search.spec.js  settings.spec.js
nginx/: nginx.conf
seeds/: feeds.opml
(+7 files in other folders)
